# LC_GINS

./: CMakeLists.txt  README.md  figure.py  lc_gins_node.cpp
dataset/: GNSS-RTK.txt
impl/app/: gins_review.cpp
impl/include/: gins_impl.h  gins_interface.h
impl/src/: gins_impl.cpp
impl/tool/: earth.h  rotation.h
include/: common.h  gi_lib.h  gilib_interface.h  mathcal.h  rotation.h
interface/demo/: gins_demo.cpp
interface/include/: gins_interface.h
src/: gi_lib.cpp
